force-app/main/default/objects/Survey_Elements__c/Survey_Elements__c.object-meta.xml
<CustomObject>
    <description>Survey elements contains questions and panel information.</description>
    <label>Survey Elements</label>
    <nameField>
        <label>Survey Questions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Elements</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>