force-app/main/default/objects/Survey_Elements__c/fields/Choices__c.field-meta.xml
<CustomField>
    <fullName>Choices__c</fullName>
    <label>Choices</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sample</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>