force-app/main/default/objects/Survey_Elements__c/fields/Elements__c.field-meta.xml
<CustomField>
    <fullName>Elements__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Elements</label>
    <referenceTo>Survey_Elements__c</referenceTo>
    <relationshipLabel>Survey Elements</relationshipLabel>
    <relationshipName>Survey_Elements</relationshipName>
    <type>Lookup</type>
</CustomField>