force-app/main/default/objects/Survey_Elements__c/fields/None_Text__c.field-meta.xml
<CustomField>
    <fullName>None_Text__c</fullName>
    <label>None Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>