force-app/main/default/objects/Survey_Elements__c/fields/Pages__c.field-meta.xml
<CustomField>
    <fullName>Pages__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pages</label>
    <referenceTo>Pages__c</referenceTo>
    <relationshipLabel>Survey Elements</relationshipLabel>
    <relationshipName>Survey_Elements</relationshipName>
    <type>Lookup</type>
</CustomField>