force-app/main/default/objects/Survey_Elements__c/fields/Show_None_Item__c.field-meta.xml
<CustomField>
    <fullName>Show_None_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show None Item</label>
    <type>Checkbox</type>
</CustomField>