force-app/main/default/objects/Survey_Elements__c/fields/Start_With_New_Line__c.field-meta.xml
<CustomField>
    <fullName>Start_With_New_Line__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Start With New Line</label>
    <type>Checkbox</type>
</CustomField>